[package]
name = "segmented_array"
version = "1.1.0"
edition = "2024"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Segmented array (growable, append-only) data structure."
repository = "https://github.com/nlfiedler/segarray"
readme = "README.md"
keywords = ["collections", "segmented", "arrays", "data structures"]
license = "MIT"
exclude = [
    "TODO.org",
    "test/*",
]

[dev-dependencies]
rand = "0.9.2"
ulid = "1.2.1"
