[package]
name = "segment-array"
version = "1.0.3"
edition = "2024"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Segment array (growable, append-only) data structure."
repository = "https://github.com/nlfiedler/segarray"
readme = "README.md"
keywords = ["collections", "segment-array", "data-structures"]
categories = ["data-structures"]
license = "MIT"
exclude = ["TODO.org", "test/*"]

[dev-dependencies]
ulid = "1.2.1"
